# kurobako

./: .gitignore  CMakeLists.txt  README.md  kurobako.sln  kurobakoconfig.h.in  vs-chromium-project.txt
ext/: cmakelists.txt
ext/FreeImage/: cmakelists.txt
ext/GLFW/: cmakelists.txt
ext/vulkan/: cmakelists.txt
kurobako/: cmakelists.txt  kurobako.vcxproj  kurobako.vcxproj.filters
kurobako/src/: enginemain.cpp  enginemain.h  kurobakoconfig.h
kurobako/src/engine/: engine.cpp  engine.h  enginecontext.cpp  enginecontext.h  runtime.cpp  runtime.h  system.h  testsystem.cpp  testsystem.h
kurobako/src/graphics/: hello_triangle.cpp  hello_triangle.h  renderer.cpp  renderer.h  sample_code.cpp  vk_allocator.h  vk_device.h  vk_instance.cpp  vk_instance.h  vkhandle.h
kurobako/src/graphics/shaders/: compile.bat  shader.vert
kurobako/src/graphics/vk/: allocator.h  device.cpp  device.h  handle.h  instance.cpp  instance.h  logical_device.cpp  logical_device.h  physical_device.cpp  physical_device.h  queue.cpp  queue.h
kurobako/src/jobs/: enginejobs.cpp  enginejobs.h  runtimejobs.cpp  runtimejobs.h  tasks.h
kurobako/src/log/: logger.h
kurobako/src/memory/: arrayheap.cpp  arrayheap.h  circularbuffer.cpp  circularbuffer.h  circularmemorybuffer.h  memoryblockheap.cpp  memoryblockheap.h  memoryconstants.h  memoryheap.cpp  memoryheap.h  memorymanager.cpp  memorymanager.h  memorymanager.hpp  memorystack.cpp  memorystack.h  memorystats.cpp  memorystats.h  memorythoughts.txt
kurobako/src/scheduler/: batch.cpp  batch.h  chain.cpp  chain.h  counter.h  deque.cpp  export.h  job.cpp  job.h  kernel.cpp  kernel.h  thread.h  worker.cpp  worker.h
kurobako/src/tests/: memorytests.cpp  memorytests.h  tests.cpp
kurobako/src/types/: nonpersistentstring.cpp  nonpersistentstring.h  typehelper.h
kurobako/src/utility/: globalsingletons.h  singleton.h  singletonmanager.h
sandbox/: cmakelists.txt  sandbox.vcxproj
sandbox/src/: main.cpp
src/kurobako/: CMakeLists.txt  enginemain.cpp  enginemain.h  kurobakoconfig.h
src/kurobako/graphics/: hello_triangle.cpp
src/kurobako/log/: logger.cpp  logger.h
src/kurobako/memory/: circularmemorybuffer.cpp  circularmemorybuffer.h  memoryblock.h  memoryheap.cpp  memoryheap.h  memorymanager.cpp  memorymanager.h  memorymanager.hpp  memorypool.h  memorystack.cpp  memorystack.h  memorystats.cpp
src/kurobako/scheduler/: batch.cpp  batch.h  counter.cpp  deque.h  job.cpp  job.h  kernel.h  thread.cpp
src/kurobako/tests/: tests.h
src/kurobako/types/: nonpersistentstring.h  sizedtypes.h
src/kurobako/utility/: globalsingletons.h  singleton.h
src/sandbox/: CMakeLists.txt  main.cpp
